tempfile/derive_more/tests/compile_fail/from/multiple_struct_attributes.rs
#[derive(derive_more::From)]
#[from(i32)]
#[from(forward)]
struct Foo(i32);

fn main() {}
